--- a/2.Estadistica/Regresion_lineal_simple_explicado.ipynb
+++ b/2.Estadistica/Regresion_lineal_simple_explicado.ipynb
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "a6aac1d6",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "ce660940",
    "metadata": {},
    "outputs": [
@@ -201,8 +201,75 @@
    "execution_count": null,
    "id": "ab838e69",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Model.from_formula() missing 1 required positional argument: 'data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mstatsmodels\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mformula\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mapi\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msmf\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m lm = \u001b[43msmf\u001b[49m\u001b[43m.\u001b[49m\u001b[43mols\u001b[49m\u001b[43m(\u001b[49m\u001b[43mformula\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43my ~ x\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m.fit()\n",
+      "\u001b[31mTypeError\u001b[39m: Model.from_formula() missing 1 required positional argument: 'data'"
+     ]
+    }
+   ],
+   "source": [
+    "import statsmodels.formula.api as smf\n",
+    "lm = smf.ols(formula=\"y ~ x\", data=df).fit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e7225bd",
+   "metadata": {},
+   "source": [
+    "### Explicación\n",
+    "\n",
+    "- Qué es `smf.ols`\n",
+    "    - `smf` es el módulo `statsmodels.formula.api`.\n",
+    "    - `ols` significa Ordinary Least Squares (Mínimos Cuadrados Ordinarios). Construye un modelo lineal explícito a partir de una fórmula tipo `patsy`: `\"Y ~ X1 + X2\"`.\n",
+    "    - Fórmula: `\"Weight ~ Height\"` corresponde al modelo\n",
+    "        y_i = β0 + β1 * x_i + ε_i\n",
+    "        donde y_i es `Weight`, x_i es `Height`, β0 es la ordenada al origen (intercept) y ε_i el término de error.\n",
+    "\n",
+    "- Parámetros de la llamada\n",
+    "    - `data=df`: DataFrame donde `patsy` busca las variables nombradas en la fórmula.\n",
+    "    - La fórmula usa los nombres de columnas exactamente como aparecen en `df`. El intercept está incluido por defecto; para eliminarlo usar `-1` o `0` en la fórmula.\n",
+    "\n",
+    "- Qué hace `.fit()`\n",
+    "    - Estima los coeficientes β (mínimos cuadrados) minimizando la suma de errores al cuadrado.\n",
+    "    - Calcula estadísticas asociadas: errores estándar, t-values, p-values, varianza residual, log-likelihood, AIC, BIC, etc.\n",
+    "    - Devuelve un objeto tipo `RegressionResultsWrapper` (modelo ajustado) que contiene métodos y atributos útiles.\n",
+    "\n",
+    "- Atributos / métodos más usados del resultado (`res = smf.ols(...).fit()`)\n",
+    "    - `res.params` — coeficientes estimados (β0, β1,...)\n",
+    "    - `res.bse` — errores estándar de los coeficientes\n",
+    "    - `res.tvalues`, `res.pvalues`\n",
+    "    - `res.conf_int()` — intervalos de confianza\n",
+    "    - `res.fittedvalues` — valores predichos sobre los datos usados para ajustar\n",
+    "    - `res.resid` — residuales (y - ŷ)\n",
+    "    - `res.predict(new_df)` — predicción para nuevos datos (nombres de columnas deben coincidir)\n",
+    "    - `res.summary()` — resumen completo del ajuste\n",
+    "    - `res.rsquared` — R², `res.mse_resid` — MSE de los residuales\n",
+    "\n",
+    "- Opciones avanzadas en `.fit()`\n",
+    "    - Se pueden solicitar errores estándar robustos: `res = smf.ols(...).fit(cov_type='HC3')`\n",
+    "    - Hay parámetros para método numérico (`method`), `cov_kwds`, etc., según necesidades.\n",
+    "\n",
+    "- Supuestos y comprobaciones (relevantes tras el ajuste)\n",
+    "    - Linealidad: residuales vs ajustes sin patrón.\n",
+    "    - Homocedasticidad: varianza constante de residuales (test Breusch–Pagan).\n",
+    "    - Independencia: sin autocorrelación (Durbin–Watson).\n",
+    "    - Normalidad de residuales: Q–Q plot o test de Shapiro.\n",
+    "    - Si se violan, considerar transformaciones, variables adicionales, modelos robustos o heteroscedasticidad-consistent SEs.\n",
+    "\n",
+    "- Uso típico\n",
+    "    - Ajuste: `lm = smf.ols(data=df, formula=\"Weight ~ Height\").fit()`\n",
+    "    - Inspección: `lm.summary()`, `lm.params`\n",
+    "    - Predicción: `lm.predict(pd.DataFrame({'Height':[60,70]}))`\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -335,6 +402,58 @@
    "source": [
     "## Analisis de Residuales\n",
     "\n",
+    "### ¿Qué son los residuales?\n",
+    "\n",
+    "- Definición: el residual para la i-ésima observación es  \n",
+    "    $$e_i = y_i − ŷ_i$$\n",
+    "\n",
+    "    donde $y_i$ es el valor observado y $ŷ_i$ es el valor predicho por el modelo.\n",
+    "\n",
+    "- Interpretación: el residual es la parte del valor observado que no explica el modelo —una estimación del error real. \n",
+    "  - Valores positivos indican que el modelo subestimó; \n",
+    "  - Valores negativos que sobreestimó.\n",
+    "\n",
+    "- Uso práctico:\n",
+    "    - Diagnóstico del modelo: gráficas de residuales vs. valores ajustados, residuales vs. x, histogramas o Q‑Q ayudan a detectar no linealidad, heteroscedasticidad y falta de normalidad.\n",
+    "\n",
+    "    - Métricas: MSE, RMSE y MAE se calculan a partir de los residuales.\n",
+    "\n",
+    "    - Detección de outliers/puntos influyentes: residuales estandarizados o studentizados (|e| > 2 o 3) señalan observaciones atípicas.\n",
+    "\n",
+    "- Qué esperar en un buen ajuste:\n",
+    "    - Residuales distribuidos aleatoriamente alrededor de 0 (sin patrón).\n",
+    "\n",
+    "    - Varianza aproximadamente constante (homoscedasticidad).\n",
+    "    \n",
+    "    - Distribución cercana a la normal (para inferencia).\n",
+    "\n",
+    "Ejemplo (fórmula):  \n",
+    "\n",
+    "$$MSE = (1/n) Σ (y_i − ŷ_i)^2$$\n",
+    "\n",
+    "— calcula el promedio de los cuadrados de los residuales.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4daf9e0d",
+   "metadata": {},
+   "source": [
+    "**Heteroscedasticidad** \n",
+    "\n",
+    "Es una condición en la que la varianza de los errores (residuales) de un modelo de regresión no es constante a lo largo de todos los niveles de la variable independiente. En otras palabras, los residuos muestran una dispersión que varía dependiendo del valor de la variable predictora, lo que puede afectar la validez de las inferencias estadísticas realizadas a partir del modelo.\n",
+    "\n",
+    "**Homoscedasticidad**\n",
+    "\n",
+    "La homocedasticidad es la condición opuesta a la heteroscedasticidad, donde la varianza de los errores (residuales) de un modelo de regresión es constante a lo largo de todos los niveles de la variable independiente. Esto significa que los residuos están distribuidos uniformemente, lo que es un supuesto clave para muchos métodos estadísticos y modelos de regresión."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb4be4e7",
+   "metadata": {},
+   "source": [
     "Sea un modelo de regresión lineal:\n",
     "$$ 𝑦𝑖=𝛽0+𝛽1𝑥𝑖+𝜀𝑖 $$\n",
     "\n",
@@ -512,6 +631,50 @@
     "plt.title(\"Distribución de residuales\")\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b041e6d6",
+   "metadata": {},
+   "source": [
+    "### ¿Qué hace `plot(kind='kde')`?\n",
+    "\n",
+    "- `kde` = Kernel Density Estimate (Estimación por núcleo).  \n",
+    "- Traza una curva suavizada que estima la función de densidad de probabilidad de los datos (una versión continua y suavizada de un histograma).\n",
+    "- Se usa sobre una Series (devuelve la densidad de esa variable) o sobre un DataFrame (trae una curva por cada columna).\n",
+    "\n",
+    "Características importantes:\n",
+    "- El área bajo la curva es 1 (es una densidad).\n",
+    "- La forma depende del kernel y del parámetro de ancho de banda (bandwidth): un bandwidth pequeño produce una curva muy ruidosa; uno grande sobre-suaviza.\n",
+    "- Es útil para inspeccionar la forma de la distribución (asimetría, multimodalidad, colas) — por ejemplo para analizar residuales.\n",
+    "- No es adecuada para datos puramente discretos o con muchos valores repetidos sin ajustes.\n",
+    "\n",
+    "Parámetros comunes (pandas/matplotlib):\n",
+    "- `bw_method` o `bw` — controla el ancho de banda.\n",
+    "- `ax`, `label`, `legend`, `color`, etc. — opciones estándar de trazado.\n",
+    "\n",
+    "Ejemplos:\n",
+    "```python\n",
+    "# Series de residuales\n",
+    "(residuals).plot(kind='kde')\n",
+    "\n",
+    "# Columna del DataFrame\n",
+    "df['Height'].plot(kind='kde')\n",
+    "\n",
+    "# Varias columnas (DataFrame)\n",
+    "df[['Height','Weight']].plot(kind='kde')\n",
+    "```\n",
+    "\n",
+    "Alternativas: `seaborn.kdeplot()` o `seaborn.displot(kind='kde')` ofrecen más control visual y opciones avanzadas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1dc44cbb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
