--- a/1.Fundamentos de Python/8.Pandas.ipynb
+++ b/1.Fundamentos de Python/8.Pandas.ipynb
@@ -381,6 +381,51 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Eliminar filas"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Eliminar filas con NaN en un DataFrame:\n",
+        "\n",
+        "# 1) Eliminar filas que tienen ANY NaN (no modifica df original)\n",
+        "df_sin_nan = df.dropna()\n",
+        "print(\"Original df shape:\", df.shape, \"-> sin NaN (any):\", df_sin_nan.shape)\n",
+        "\n",
+        "# 2) Eliminar filas que tienen NaN en columnas específicas (ej. 'Edad')\n",
+        "df_sin_nan_edad = df.dropna(subset=['Edad'])\n",
+        "print(\"Sin NaN en 'Edad':\", df_sin_nan_edad.shape)\n",
+        "\n",
+        "# 3) Eliminar filas que están completamente vacías (all NaN)\n",
+        "df_no_allnull = df.dropna(how='all')\n",
+        "print(\"Eliminadas filas con all NaN:\", df_no_allnull.shape)\n",
+        "\n",
+        "# 4) Mantener sólo filas con al menos N valores no nulos (ej. al menos 2)\n",
+        "df_thresh = df.dropna(thresh=2)\n",
+        "print(\"Filas con al menos 2 valores no nulos:\", df_thresh.shape)\n",
+        "\n",
+        "# 5) Hacer la operación in-place (modifica df)\n",
+        "# Atención: dropna(inplace=True) devuelve None\n",
+        "df_copy = df.copy()            # crear copia si no quiere perder el original\n",
+        "df_copy.dropna(inplace=True)\n",
+        "print(\"Copia df_copy tras dropna(inplace=True):\", df_copy.shape)\n",
+        "\n",
+        "# 6) Aplicado al DataFrame df_maximas (eliminar filas sin temperatura)\n",
+        "if 'df_maximas' in globals():\n",
+        "    df_maximas_clean = df_maximas.dropna(subset=['Temperatura']).reset_index(drop=True)\n",
+        "    print(\"df_maximas shape:\", df_maximas.shape, \"-> df_maximas_clean:\", df_maximas_clean.shape)\n",
+        "else:\n",
+        "    print(\"df_maximas no existe en el entorno actual.\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "jfp5-7fiY8IP"
       },
@@ -495,9 +540,25 @@
         "df.query('Edad > 25 and Ciudad == \"Medellín\"')\n",
         "# O con variables\n",
         "edad_min = 20\n",
-        "%pip install openpyxl\n",
         "\n",
         "df.query('Edad > @edad_min')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Dataframe to csv\n",
+        "```python\n",
+        "import os\n",
+        "\n",
+        "# Exportar el DataFrame `covid` a CSV en ../data/\n",
+        "data = \"../data/\"\n",
+        "os.makedirs(data, exist_ok=True)\n",
+        "output_path = os.path.join(data, \"covid-19cases.csv\")\n",
+        "covid.to_csv(output_path, index=False)\n",
+        "print(f\"CSV guardado en: {output_path} ({len(covid)} filas)\")\n",
+        "```"
       ]
     },
     {
