--- a/5.Visualizacion/Matplotlib.ipynb
+++ b/5.Visualizacion/Matplotlib.ipynb
@@ -21,10 +21,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "61d6a63c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (4022149273.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mpip install matplotlib\u001b[39m\n        ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# pip\n",
     "pip install matplotlib\n",
@@ -78,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e1c24af8",
    "metadata": {},
    "outputs": [],
@@ -99,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a8f09bae",
    "metadata": {},
    "outputs": [
@@ -383,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "007e51f6",
    "metadata": {},
    "outputs": [
@@ -417,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c36289e0",
    "metadata": {},
    "outputs": [
@@ -470,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "2b73961f",
    "metadata": {},
    "outputs": [
@@ -514,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "f9e9439f",
    "metadata": {},
    "outputs": [
@@ -565,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "a4feef9c",
    "metadata": {},
    "outputs": [],
@@ -577,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "fd4bc3ad",
    "metadata": {},
    "outputs": [
@@ -632,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "342db64c",
    "metadata": {},
    "outputs": [
@@ -678,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "a4319695",
    "metadata": {},
    "outputs": [
@@ -746,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "d31ed9c4",
    "metadata": {},
    "outputs": [
